<resources>
    <string name="app_name">Plant Planner</string>

    <!-- Login activity -->
    <string name="user_label">Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="log_in_label">Iniciar sesión</string>
    <string name="email_register_label">Registrarse vía Email</string>
    <string name="twitter_log_in_label">Iniciar sesión con twitter</string>
    <string name="google_log_in_label">Iniciar sesión con google</string>
    <string name="entrar_sin_login">Entrar sin iniciar sesión</string>

    <!-- Register activity -->
    <string name="name_label">Nombre</string>
    <string name="email_label">Email</string>
    <string name="repeat_password_label">Repetir contraseña</string>
    <string name="birthday">Cumpleaños</string>
    <string name="accept_terms_label">He leído y acepto las políticas de privacidad.</string>
    <string name="register_label">Registrarse</string>
    <string name="correct_register">Registrado correctamente.</string>
    <string name="pass_not_match">Las contraseñas no coinciden.</string>

    <!-- Bottom navigation -->
    <string name="inventory">Inventario</string>
    <string name="camera">Cámara</string>
    <string name="calendar">Calendario</string>
    <string name="social">Social</string>
    <string name="profile">Perfil</string>

    <!-- Empty inventory fragment -->
    <string name="inventory_empty">Tu inventario está vacio!</string>
    <string name="start_inventory">Comienza añadiendo una planta, bien buscándola en una lista o mediante la cámara de tu móvil.</string>
    <string name="search_plant_type">Buscar tipo planta</string>

    <!-- Camera fragment -->
    <string name="galeria">Galería</string>
    <string name="detectar_planta">Detectar planta</string>

    <!-- Social fragment -->
    <string name="search_friends">Amigos</string>

    <!-- Settings activity -->
    <string name="close_session">Cerrar sesión</string>
    <string name="theme_light">Tema claro 1</string>
    <string name="theme_light_1">Tema claro 2</string>
    <string name="dark_theme">Tema oscuro</string>
    <string name="dark_mode">Modo oscuro</string>

    <!-- Not sign in alert -->
    <string name="sign_in_alert">Por favor, inicie sesión para acceder a esta funcionalidad</string>

    <!-- Profile fragment -->
    <string name="add_new_title">Título...</string>
    <string name="add_location">Añadir localización</string>
    <string name="john_doe">John Doe</string>
    <string name="police_officer_at_nyc">Police officer en NYC</string>
    <string name="the_bronx_nyc">The Bronx, NYC</string>
    <string name="followers">seguidores</string>
    <string name="views">visitas</string>
    <string name="settings">Ajustes</string>

    <!-- Eula activity -->
    <string name="end_user_license_agreement">Licencia de usuario</string>

    <!-- Plant attributes activity -->
    <string name="add_plant_button">Botón añadir planta</string>
    <string name="add_plant">Añadir planta</string>
    <string name="discard_button">Botón descartar</string>
    <string name="ltimo_riego">Último riego</string>
    <string name="frecuencia_de_riego">Frecuencia de riego en días</string>
    <string name="change_photo">Cambiar foto</string>
    <string name="location_home">Ubicación en casa</string>
    <string name="search_plant_type_atrib">Añadir especie*</string>
    <string name="delete_plant">Eliminar planta</string>
    <string name="delete_plant_message">¿Estás seguro de que quieres eliminar esta planta?</string>
    <string name="delete_plant_positive">Sí</string>
    <string name="delete_plant_negative">No</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="edit_plant">Editar planta</string>
    <string name="introducir_planta_nombre">Nombre de la planta*</string>

    <!-- Search plant activity -->
    <string name="buscador_de_especies">Buscador de especies</string>
    <string name="busca_aqui_especie">Busca aquí tu especie</string>
    <string name="sin_resultados">Sin resultados</string>

    <!-- Calendar fragment -->
    <string name="no_events_today">¡No hay eventos para hoy! Descansa y mira tus plantas crecer.</string>
    <string name="no_events_past">Para el día %1$s no había nada planificado</string>
    <string name="no_events_future">Para el día %1$s no hay nada planificado</string>

    <!-- general -->
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="publish">Publicar</string>
    <string name="location">Localización</string>
    <string name="reject">Rechazar</string>
    <string name="no_implementation">No implementado</string>

</resources>