<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/inventory"/>
    <item
        android:id="@+id/page_2"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/page_3"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/camera"/>
    <item
        android:id="@+id/page_4"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/social"/>
    <item
        android:id="@+id/page_5"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/profile"/>
</menu>